Fix carousel overflow

--- a/src/components/AboutMe/Prints.css
+++ b/src/components/AboutMe/Prints.css
@@ -1,6 +1,5 @@
 .carousel {
     width: 700px;
-    height: 500px;
     overflow: hidden;
 
     @media (max-width: 768px) {
@@ -18,9 +17,6 @@
 .image-carousel {
     max-width: 100%;
     max-height: 100%;
-    object-fit: contain;
-    display: block;
-    margin: auto;
 }
 
 .p-print {
